; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/dev/arm64/extr_conf.c_chrtoblk.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/dev/arm64/extr_conf.c_chrtoblk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@nchrdev = common dso_local global i64 0, align 8
@NODEV = common dso_local global i32 0, align 4
@chrtoblktab = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @chrtoblk(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i64 @major(i32 %5)
  %7 = load i64, i64* @nchrdev, align 8
  %8 = icmp uge i64 %6, %7
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i32, i32* @NODEV, align 4
  store i32 %10, i32* %2, align 4
  br label %27

11:                                               ; preds = %1
  %12 = load i32*, i32** @chrtoblktab, align 8
  %13 = load i32, i32* %3, align 4
  %14 = call i64 @major(i32 %13)
  %15 = getelementptr inbounds i32, i32* %12, i64 %14
  %16 = load i32, i32* %15, align 4
  store i32 %16, i32* %4, align 4
  %17 = load i32, i32* %4, align 4
  %18 = load i32, i32* @NODEV, align 4
  %19 = icmp eq i32 %17, %18
  br i1 %19, label %20, label %22

20:                                               ; preds = %11
  %21 = load i32, i32* @NODEV, align 4
  store i32 %21, i32* %2, align 4
  br label %27

22:                                               ; preds = %11
  %23 = load i32, i32* %4, align 4
  %24 = load i32, i32* %3, align 4
  %25 = call i32 @minor(i32 %24)
  %26 = call i32 @makedev(i32 %23, i32 %25)
  store i32 %26, i32* %2, align 4
  br label %27

27:                                               ; preds = %22, %20, %9
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}

declare dso_local i64 @major(i32) #1

declare dso_local i32 @makedev(i32, i32) #1

declare dso_local i32 @minor(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
